fix(css): adjust sidebar collapse behavior for mobile screens

--- a/blog/static/blog/css/styles.css
+++ b/blog/static/blog/css/styles.css
@@ -54,10 +54,18 @@ body {
   box-shadow: inset -1px 0 0 rgba(255, 255, 255, .1);
 }
 
+/* sidebar collapse */
+@media (min-width: 666px) {
+  .offset-md-2 {
+    margin-left: 16.66666667%;
+  }
+  .d-md-block {
+    display: block !important;
+  }
+}
+
 .footer {
-  margin-left: 16.67%;
   bottom: 0;
-  width: 83.33%;
   padding: 10px;
   text-align: center;
   box-shadow: 0 -1px 0 rgba(0, 0, 0, .1);
